tests/ui/const-generics/occurs-check/unused-substs-3.stderr
error[E0308]: mismatched types
  --> $DIR/unused-substs-3.rs:16:9
   |
LL |     t = foo;
   |         ^^^- help: try using a conversion method: `.to_vec()`
   |         |
   |         cyclic type of infinite size

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
